--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "ts-node": "^10.8.0"
+    "ts-node": "^10.8.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
+    "@types/uuid": "^8.3.4",
+    "nodemon": "^2.0.16",
     "typescript": "^4.7.2"
   }
 }
